--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,9 @@
 [theme]
-primaryColor = "#8b5cf6"
-backgroundColor = "#0f172a"
-secondaryBackgroundColor = "#1e293b"
-textColor = "#f1f5f9"
+base = "light"
+primaryColor = "#000000"
+backgroundColor = "#ffffff"
+secondaryBackgroundColor = "#f8f9fa"
+textColor = "#000000"
 font = "sans serif"
 
 [server]
